1999-09-08  James Henstridge  <james@daa.com.au>

	* commands.[ch]: added callbacks for the print menu item.  Currently
	it only does A4 output.  I will make it configurable soon.
	
	* app/menus.c: add a print diagram menu item if gnome-print support
	is enabled.
	
	* app/paginate_gnomeprint.c, app/paginate_gnomeprint.h: this is a
	bit higher level than the gnome-print renderer.  It splits the
	diagram into page size chunks and then renders them.  For each
	page, it only renders the objects whose bounding box intersects
	the page, and it sets the clip mask so that the diagram does not
	overlap the margins.
	
	* app/render_gnomeprint.c, app/render_gnomeprint.h: added a renderer
	that uses gnome-print as its back end.
	
	* configure.in: added a check for gnome-print.  It is disabled by
	default because the code is not really working correctly yet.

	* app/menus.c: the delete object menu item was missing from the
	GnomeUIInfo style menus.

1999-09-07  Fredrik Hallenberg  <hallon@lysator.liu.se>

	* configure.in
	Added japanese to ALL_LINGUAS.
	Fix for Linux on Alpha.

1999-09-07  Alexander Larsson  <alla@lysator.liu.se>

	* app/create_object.c (create_object_button_press):
	Always initialize tool->obj. Otherwise we store a null
	in the undo Change.

	* lib/text.c:
	Set linestyle before drawing cursor.
	Fix undo of backwards delete.

1999-09-05  James Henstridge  <james@daa.com.au>

	* dia.spec: updated spec file to distribute $(prefix)/share/dia.

	* app/render_svg.c (draw_image): some fixes so that the appropriate
	style attributes are set.  Before it was setting line styles on
	fill_* functions.  Now it only does this for the draw_* variants.

	* app/Makefile.am (run_dia.sh): set the DIA_SHAPE_PATH environment
	variable so that custom shapes can be loaded.

	* shapes/: new directory for custom shapes.  The Circuit sheet has
	been moved here.

1999-09-02  James Henstridge  <james@daa.com.au>

	* TODO: removed a few todo items that have been implemented.
